style.css
@font-face {
  font-family: 'menloFont';
  src: url('https://raw.githubusercontent.com/notmugi/notmugi.github.io/master/menlo-regular-webfont.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
}

body {
  background-color: white;
  color: #000000;
  image-rendering: pixelated;
  margin: 0;
  overflow: hidden;
}

#main {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  padding-top: 2vh;
  position: relative;
  z-index: 1;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 90vw;
  max-width: 60vw;
}

@media (max-width: 768px) {
  .container {
    max-width: 95vw;
  }
}

.links {
  display: flex;
  justify-content: center;
  align-items: center;
}

a {
  color: black;
  text-decoration: none;
  font-family: menloFont;
  transition-duration: 1s;
  margin-left: 3vw;
  margin-right: 3vw;
  white-space: nowrap;
}

a:hover {
  color: lightblue;
}

#linkHolder {
  background-color: transparent;
  padding: 0.4rem 1rem;
  border-radius: 0.75rem;
}

#discord {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.displaytextthree {
  text-align: center;
  color: #bfbfbf;
  text-decoration: none;
  font-family: menloFont;
  margin: 0.5vw;
}

